# genai-eval

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_comparisons.py  0003_human_scores.py
dashboard/: .prettierignore  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/runs/: route.ts
dashboard/app/runs/[id]/: page.tsx
dashboard/components/: PassRateGrid.tsx  RunSummary.tsx  TrendChart.tsx
dashboard/lib/: api.ts
dashboard/tests/e2e/: dashboard.spec.ts  mock-server.js
dashboard/tests/unit/: PassRateGrid.test.tsx  RunSummary.test.tsx  TrendChart.test.tsx
eval/baselines/: README.md  fake-large.json
eval/rubrics/: calque_es.md  honorific_ja.md
eval/suites/classification/: en.yaml  es.yaml  ja.yaml
eval/suites/code_repair/: python.yaml
eval/suites/qa/: en.yaml  es.yaml  ja.yaml
eval/suites/summarization/: en.yaml  es.yaml  ja.yaml
eval/suites/translation/: pairs.yaml
infra/: prometheus.yml
scripts/: bench_regress.py  generate_synthetic_examples.py
src/genai_eval/: __init__.py  api.py  calibration.py  cli.py  comparisons.py  models.py  orchestrator.py  settings.py
src/genai_eval/localization/: __init__.py  calque_judge.py  honorific_judge.py  script_check.py
src/genai_eval/metrics/: __init__.py  chrf.py  exact_match.py  rouge_l.py  token_f1.py
src/genai_eval/providers/: __init__.py  anthropic.py  fake.py  openai.py
src/genai_eval/tasks/: __init__.py  classification.py  code_repair.py  qa.py  summarization.py  translation.py
tests/: conftest.py
tests/integration/: test_api_basic.py  test_full_run.py  test_human_scoring.py
tests/unit/: test_calibration.py  test_comparisons.py  test_eval_smoke.py  test_localization.py  test_metrics.py  test_metrics_properties.py  test_orchestrator.py  test_providers.py  test_tasks.py
