[tool.poetry]
name = "genai-eval"
version = "0.1.0"
description = "Multilingual GenAI evaluation service across 5 task types and 3 languages, with regression-trend dashboard"
authors = ["Sai Asish Y <saiasish.cnp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "genai_eval", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"
alembic = "^1.13.3"
click = "^8.1.7"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
pyyaml = "^6.0.2"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
respx = "^0.21.1"
mypy = "^1.13.0"
ruff = "^0.7.1"
black = "^24.10.0"
types-pyyaml = "^6.0.12.20240917"
pre-commit = "^4.0.1"
hypothesis = "^6.152.4"

[tool.poetry.scripts]
genai-eval = "genai_eval.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "PIE", "RET", "SIM", "ARG"]
# B008: FastAPI uses Query(...) in defaults idiomatically; this is the prescribed pattern.
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
files = ["src/genai_eval"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: integration tests (gated on RUN_INTEGRATION=1)",
]

[tool.coverage.run]
source = ["src/genai_eval"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
